apps/servarr/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: servarr-stack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/part-of: servarr-stack
      annotations:
        linkerd.io/inject: enabled
    spec:
      serviceAccountName: prowlarr
      securityContext:
        fsGroup: 1000
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.3.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9696
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 384Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
