apps/servarr/prowlarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: servarr-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prowlarr.lan
    external-dns.alpha.kubernetes.io/target: "192.168.68.62"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.lan`)
      kind: Rule
      middlewares:
        - name: lan-allowlist
          namespace: kube-system
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: prowlarr-lan-tls
