apps/servarr/prowlarr/authorizationpolicy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: prowlarr-allow-probes
  namespace: servarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: servarr-stack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: prowlarr-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet-probes
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: prowlarr-allow-traefik
  namespace: servarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: servarr-stack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: prowlarr-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: prowlarr-traefik
